8262377: Parallel class resolution loses constant pool error