src/hotspot/share/classfile/systemDictionary.hpp
@@ -277,10 +277,10 @@ public:
   // Record the error when the first attempt to resolve a reference from a constant
   // pool entry to a class fails.
   static void add_resolution_error(const constantPoolHandle& pool, int which, Symbol* error,
-                                   Symbol* message);
+                                   Symbol* message, Symbol* cause = NULL, Symbol* cause_msg = NULL);
   static void delete_resolution_error(ConstantPool* pool);
   static Symbol* find_resolution_error(const constantPoolHandle& pool, int which,
-                                       Symbol** message);
+                                       Symbol** message, Symbol** cause, Symbol** cause_msg);
 
 
   // Record a nest host resolution/validation error
